assets/style.css
@keyframes brillar {
    0% { text-shadow: 0 0 5px #8d24aa8a, 0 0 10px #8d24aa8a, 0 0 15px #8d24aa80, 0 0 20px #8d24aa8e; }
    50% { text-shadow: 0 0 20px #c825d081, 0 0 30px #c825d086, 0 0 40px #c825d098, 0 0 50px #c825d0a4; }
    100% { text-shadow: 0 0 5px #8d24aa7e, 0 0 10px #8d24aa77, 0 0 15px #8d24aa85, 0 0 20px #8d24aa83; }
  }
  
  h1 {
    font-family: 'Iceberg', sans-serif;
    font-style: normal;
    text-align: center;
    font-size: 77px;
    color: #8d24aab4;
    text-shadow: 0 0 5px #8d24aa8f, 0 0 10px #8d24aaa1, 0 0 15px #8d24aaa9, 0 0 20px #8d24aa7c;
    animation: brillar 3s ease-in-out infinite;
  } 

  body {
    background-color: black;
    place-items: center;
  }

p {
  color: white;
  text-align: center;
  font-size: 13;
  font-family: "Anta", sans-serif
}

f {
  color: white;
  text-align: center;
  font-size: 10;
  font-family: "Tilt Neon", sans-serif;
}

i {
  align-items: center;
}

  #particles-js {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: -1;
  }

  h2 {
    color: #7E30E4;
    text-decoration: none;
    text-align: center;
    border-radius: 0px;
    border: 0px;
    font-family: Iceland;
    font-size: 30px;
    margin: 0px auto;
    animation: a 3s linear infinite;
    animation-duration: 3s;
    animation-timing-function: linear;
    animation-delay: 0s;
    animation-iteration-count: infinite;
    animation-direction: normal;
    animation-fill-mode: none;
    animation-play-state: running;
    animation-name: a;
    animation-timeline: auto;
    animation-range-start: normal;
    animation-range-end: normal;
  }

  h3 {
    color: #c50ea7;
    text-decoration: none;
    text-align: center;
    border-radius: 0px;
    border: 0px;
    font-family: Iceland;
    font-size: 35px;
    margin: 0px auto;
    animation: a 3s linear infinite;
    animation-duration: 3s;
    animation-timing-function: linear;
    animation-delay: 0s;
    animation-iteration-count: infinite;
    animation-direction: normal;
    animation-fill-mode: none;
    animation-play-state: running;
    animation-name: a;
    animation-timeline: auto;
    animation-range-start: normal;
    animation-range-end: normal;
  }

  .btn {
    text-align: center;
    position: center;
    background: #b5b5b5;
    background-image: -webkit-linear-gradient(top, #b5b5b5, #e3e3e3);
    background-image: -moz-linear-gradient(top, #b5b5b5, #e3e3e3);
    background-image: -ms-linear-gradient(top, #b5b5b5, #e3e3e3);
    background-image: -o-linear-gradient(top, #b5b5b5, #e3e3e3);
    background-image: linear-gradient(to bottom, #b5b5b5, #e3e3e3);
    -webkit-border-radius: 8;
    -moz-border-radius: 8;
    border-radius: 8px;
    -webkit-box-shadow: 0px 1px 9px #666666;
    -moz-box-shadow: 0px 1px 9px #666666;
    box-shadow: 0px 1px 9px #666666;
    font-family: Arial;
    color: #ffffff;
    font-size: 20px;
    padding: 10px 20px 10px 20px;
    border: solid #000000 1px;
    text-decoration: none;
  }
  
  .btn:hover {
    background: #f5f5f5;
    background-image: -webkit-linear-gradient(top, #f5f5f5, #a8a8a8);
    background-image: -moz-linear-gradient(top, #f5f5f5, #a8a8a8);
    background-image: -ms-linear-gradient(top, #f5f5f5, #a8a8a8);
    background-image: -o-linear-gradient(top, #f5f5f5, #a8a8a8);
    background-image: linear-gradient(to bottom, #f5f5f5, #a8a8a8);
    text-decoration: none;
  }
  .btn {
    background: #b5b5b5;
    background-image: -webkit-linear-gradient(top, #b5b5b5, #e3e3e3);
    background-image: -moz-linear-gradient(top, #b5b5b5, #e3e3e3);
    background-image: -ms-linear-gradient(top, #b5b5b5, #e3e3e3);
    background-image: -o-linear-gradient(top, #b5b5b5, #e3e3e3);
    background-image: linear-gradient(to bottom, #b5b5b5, #e3e3e3);
    -webkit-border-radius: 8;
    -moz-border-radius: 8;
    border-radius: 8px;
    -webkit-box-shadow: 0px 1px 9px #666666;
    -moz-box-shadow: 0px 1px 9px #666666;
    box-shadow: 0px 1px 9px #666666;
    font-family: Arial;
    color: #ffffff;
    font-size: 20px;
    padding: 10px 20px 10px 20px;
    border: solid #000000 1px;
    text-decoration: none;
  }
  
  .btn:hover {
    background: #f5f5f5;
    background-image: -webkit-linear-gradient(top, #f5f5f5, #a8a8a8);
    background-image: -moz-linear-gradient(top, #f5f5f5, #a8a8a8);
    background-image: -ms-linear-gradient(top, #f5f5f5, #a8a8a8);
    background-image: -o-linear-gradient(top, #f5f5f5, #a8a8a8);
    background-image: linear-gradient(to bottom, #f5f5f5, #a8a8a8);
    text-decoration: none;
  }
  button {
    position: fixed;
    bottom: 20px;
    left: 0;
    right: 0;
    margin: 30px; 
    align-items: center;
    --green: #1BFD9C;
    font-size: 15px;
    padding: 0.7em 2.7em;
    letter-spacing: 0.06em;
    position: relative;
    font-family: inherit;
    border-radius: 0.6em;
    overflow: hidden;
    transition: all 0.3s;
    line-height: 1.4em;
    border: 2px solid var(--green);
    background: linear-gradient(to right, rgba(27, 253, 156, 0.1) 1%, transparent 40%,transparent 60% , rgba(27, 253, 156, 0.1) 100%);
    color: var(--green);
    box-shadow: inset 0 0 10px rgba(27, 253, 156, 0.4), 0 0 9px 3px rgba(27, 253, 156, 0.1);
  }
  btnnavigation {
    display: flex;
    justify-content: center;
    position: fixed;
    bottom: 20px;
    left: 0;
    right: 0;
  }
  
  button:hover {
    color: #82ffc9;
    box-shadow: inset 0 0 10px rgba(27, 253, 156, 0.6), 0 0 9px 3px rgba(27, 253, 156, 0.2);
  }
  
  button:before {
    content: "";
    position: absolute;
    left: -4em;
    width: 4em;
    height: 100%;
    top: 0;
    transition: transform .4s ease-in-out;
    background: linear-gradient(to right, transparent 1%, rgba(27, 253, 156, 0.1) 40%,rgba(27, 253, 156, 0.1) 60% , transparent 100%);
  }
  
  button:hover:before {
    transform: translateX(15em);
  }
  .botones {
    display: flex;
    justify-content: center;
    gap: 10px;
  }
  .contenedor {
    text-align: center;
  }
  hr.gradient {
    height: 3px;
    border: none;
    border-radius: 6px;
    background: linear-gradient(
      90deg,
      rgb(197, 5, 255) 0%,
      rgb(138, 9, 150) 21%,
      rgb(130, 6, 146) 51%,
      rgb(53, 9, 65) 100%
    );
  }

